--- a/templates/custom.xml
+++ b/templates/custom.xml
@@ -9,7 +9,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="test" value="@Test&#10;@Issue(&quot;&quot;)&#10;public void $END$() {&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="test" value="@Test&#10;@Issue(&quot;&quot;)&#10;public void $END$() {&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_DECLARATION" value="true" />
     </context>
